ipad spacing issues

--- a/_sass/4-pages/_nav.sass
+++ b/_sass/4-pages/_nav.sass
@@ -77,7 +77,7 @@
 
     li
       float: none
-      padding: 0
+      padding: 0 0 20px
 
   .home
     margin-top: 30px
